<resources>
    <string name="app_name">Finaluri</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="to_sign_up_click_here">To sign up click here</string>
    <string name="signup">Signup</string>
    <string name="start">Start</string>
    <string name="sign_up">sign up</string>
    <string name="cross">Cross:</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">sign out</string>
    <string name="save">save score</string>
</resources>